<resources>
    <string name="app_name">Skeduly</string>
    <string name="agendar_button">Agendar</string>
    <string name="empleado">Empleado</string>
    <string name="estilista_button">Estilista  aleatorio</string>
    <string name="staff_1">Flora Parra</string>
    <string name="staff_2">Angela Bautista</string>
    <string name="staff_3">Xavier Cruz</string>
    <string name="staff_4">Jessica Estrada</string>
    <string name="siguiente_button">Siguiente</string>
    <string name="confirmacionDeCita">Confirmación de Cita</string>
    <string name="place_selected">Zahra Norte</string>
    <string name="staff_selected">Angela Bautista</string>
    <string name="service_selected">Aplicación de tinte</string>
    <string name="date_selected">15/01/2021</string>
    <string name="hour_selected">16:00 hrs</string>
    <string name="Subtotal">Subtotal</string>
    <string name="Descuento">Descuento</string>
    <string name="Total">Total</string>
    <string name="Precio">$400</string>
    <string name="PrecioDescontado">-$00.00</string>
    <string name="PrecioTotal">$400.00</string>
    <string name="confirmarcita_button">Confirmar Cita</string>
    <string name="sigueinte">sigiente</string>
    <string name="texto_sucursal">Sucursal</string>
    <string name="email">username@email.com</string>
    <string name="contraseña">password</string>
    <string name="olvidaste_contraseña">¿Olvidaste tu contraseña?</string>
    <string name="ingresar">Ingresar</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Número de teléfono</string>
    <string name="cumpleaños">dd/mm/aaaa</string>
    <string name="sin_cuenta">¿No tienes cuenta?</string>
    <string name="sing_up">Sign Up</string>
    <string name="registrarse">Registrarse</string>
    <string name="terminos_condiciones">Acepto los términos y condiciones</string>
    <string name="mi_mensaje"><![CDATA[Este es un <u>Mamut chiquito</u>]]></string>
    <string name="zahara_norte">Zahara norte</string>
    <string name="cita_agendada">Tu cita ha sido \n agendada con exito.</string>
    <string name="muy_bien">!MUY BIEN¡</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar_dialog">Cancelar</string>
    <string name="perfil">Perfil</string>
    <string name="historial">Historial de citas</string>
    <string name="contactanos">Contáctanos</string>
    <string name="terminosCondiciones">Términos y condiciones</string>
    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="usuario">Usuario</string>
    <string name="mensaje_confirmacion">Deseas confirmar \n tu cita en (marca) ?</string>
    <string name="confirmar">Si , Confirmar</string>
    <string name="cancelar">No,Cancelar</string>
    <string name="evaluacion">Evaluacion</string>
    <string name="staff">Staff</string>
    <string name="regresar">regresar</string>
    <string name="home">home</string>
    <string name="hora">Hora</string>
    <string name="sucursales">Sucursales</string>
    <string name="add_date">Selecciona la fecha de tu cita</string>
    <string name="acerca_de">Acerca de</string>
    <string name="share">share</string>
    <string name="informacion">informacion</string>
    <string name="textview">TextView</string>
    <string name="angela_bautista">Angela Bautista</string>
    <string name="aplicaci_n_de_tinte">Aplicación de tinte</string>
    <string name="agosto_2021">Agosto 2021</string>
    <string name="corte_de_cabello">Corte de cabello</string>
    <string name="agenla">Agenla</string>
    <string name="baustista">Baustista</string>
    <string name="zona_norte">zona norte</string>
    <string name="servicio">Servicio</string>
    <string name="_400">400</string>
    <string name="nombre_staff">Nombre staff</string>
    <string name="sucursal">Sucursal</string>
    <string name="terminos_y_condiciones">
         Lorem ipsum dolor sit amet consectetur adipisicing elit.
     Repudiandae saepe temporibus, aut enim quibusdam debitis
      voluptate aliquid reprehenderit ea dolorum tenetur, molestiae
      voluptatibus similique error accusamus omnis vero et velit deserunt,
      necessitatibus nihil sit perferendis! Eveniet ab corporis nihil aperiam
      libero quibusdam reiciendis quis beatae pariatur animi inventore quod
       dignissimos eligendi, facilis aspernatur ea! Maxime eius possimus,
       aperiam harum vitae ipsum sapiente minus suscipit eligendi enim voluptatem,
       adipisci eveniet voluptas voluptate rerum perspiciatis? Soluta, molestiae
       maiores magnam aliquid explicabo facere. Repudiandae labore illum,
       atque ullam debitis officiis adipisci amet perspiciatis in ipsam soluta,
        quasi nam magni? Deleniti ratione in necessitatibus saepe itaque, doloremque
        aut expedita blanditiis qui laboriosam fugit porro dolores. Doloribus laudantium
        reprehenderit ducimus voluptas ad, similique commodi maxime voluptatibus
        voluptatum voluptates in at aperiam itaque esse repellendus sit mollitia sint
         praesentium molestias quidem veniam cum veritatis. Perspiciatis architecto
         labore magnam cum ipsum, veniam, placeat dolore doloremque quasi deleniti nisi
         quae quo inventore debitis hic? Nobis sint quam optio voluptatum rem assumenda
         dolorem, nam illo quae reiciendis quo non. Illo, non aliquam consectetur dicta
         expedita eligendi, tenetur fuga quisquam qui corporis incidunt vel? Atque nostrum
         consectetur, rem soluta, explicabo minus cumque molestiae, tenetur totam inventore
         hic animi? Minima ipsam facere aliquid ipsa esse nesciunt voluptatibus, ea iure nostrum.
         Amet consequatur natus nam vero aliquid sunt rerum ratione eligendi, facere accusamus
         repellendus voluptatibus quidem? Repellat molestias dignissimos explicabo consequatur
          est autem natus. Perferendis unde nobis necessitatibus magnam at aspernatur animi,
    </string>
    <string name="nombre_establecimiento">Nombre Establecimiento</string>
    <string name="network_error">Error de conexion</string>
    <string name="retry">Reintentar</string>
    <string name="more">more</string>
    <string name="confirma_cita">Confirma cita</string>
    <string name="selecciona_la_hora_de_tu_cita">Selecciona la hora de tu cita</string>
    <string name="notificacion_mensaje">Tu cita ha sido agendada con exito</string>
    <string name="selecciona_un_empleado">Debes de seleccionar un empleado para poder avanzar a la siguiente pantalla</string>
    <string name="selecciona_un_servicio">Debes de seleccionar un servicio para poder avanzar a la siguiente pantalla</string>
    <string name="selecciona_una_sucursal">Debes de seleccionar una sucursal para poder avanzar a la siguiente pantalla</string>
    <string name="selecciona_hora_fecha">Debes de seleccionar hora y fecha poder avanzar a la siguiente pantalla</string>
    <string name="aviso">aviso</string>
    <string name="cancelar_alert">Cancelar</string>
    <!-- Strings for module info -->
    <string name="productos">Productos</string>
    <string name="servicios">Servicios</string>
    <string name="ubicacion">Ubicacion</string>
    <string name="nustro_staff">Nuestro Staff</string>
    <string name="cerrar_session">Cerrar session</string>
    <string name="seguro_que_deseas_cerrar_sesion">¿Seguro que deseas cerrar sesion?</string>
    <string name="correo_electronico">correo electronico</string>
    <string name="fecha">fecha</string>
    <string name="recuerda_tu_usuario">recuerda tu usuario</string>
    <string name="ingresa_tu_correo">ingresa tu correo</string>
    <string name="ingresar_con_google">INGRESAR CON GOOGLE</string>
    <string name="iniciar_session">Iniciar session</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="example_email_com">example@email.com</string>
    <string name="next">Next</string>
    <string name="aun_no_tienes_registros">Aun no tienes registros</string>
    <string name="agendar_hora">Agendar Hora</string>
    <string name="agregar">Agregar</string>
    <string name="producto">Producto</string>
    <string name="_000_00">$ 000.00</string>
    <string name="pagar">Pagar</string>
    <string name="total">Total</string>
    <string name="a_n_no_has_agregado_productos">Aún no has agregado productos</string>
    <string name="categorias">Categorías</string>
    <string name="message_add_product">¿Estás seguro que deseas agregar el producto?</string>
    <string name="product_add">El producto se agregó correctamente</string>
    <string name="cantidad">Cantidad %d</string>
    <string name="delete_all_products">¿Estás seguro que deseas eliminar todos los productos?</string>
    <string name="carrito">Carrito</string>
    <string name="nombre_establecimeinto">Nombre Establecimiento</string>
    <string name="agendar_sucursal">Agendar Sucursal</string>
    <string name="error_al_obtener_datos">Error al obtener los datos</string>
    <string name="error_internet">Verifica tu conexión de internet</string>
    <string name="message_succes">La operación se realizó con éxito</string>
    <string name="historiasl_de_citas">Historial de citas</string>
    <string name="skeduly">Skeduly</string>
    <string name="nuestro_staff">"Nuestro Staff"</string>
    <string name="terry_medhurst_smitham">Terry Medhurst Smitham</string>
    <string name="atuny0_sohu_com">atuny0@sohu.com</string>
    <string name="_1745_t_street_southeast">1745 T Street Southeast</string>
    <string name="signUp">SignUp</string>
</resources>